# ChangeLog for net-misc/kontrolpack
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*kontrolpack-2.0.2-r1 (24 Jul 2009)

  24 Jul 2009; Dominik Kapusta <d@ayoy.net> -kontrolpack-2.0.2.ebuild,
  +kontrolpack-2.0.2-r1.ebuild:
  Changed SRC_URI, corrected {,R}DEPENDS and added desktop file

  22 Jul 2009; Dominik Kapusta <d@ayoy.net> kontrolpack-2.0.2.ebuild:
  Added ~x86 keyword

  21 Jul 2009; Dominik Kapusta <d@ayoy.net> kontrolpack-2.0.2.ebuild:
  Added LINGUAS

*kontrolpack-2.0.2 (21 Jul 2009)

  21 Jul 2009; Dominik Kapusta <d@ayoy.net> +kontrolpack-2.0.2.ebuild,
  +metadata.xml:
  Initial commit
