@@ -1,5 +1,4 @@
-DIST KontrolPack-2.0.2-src.tar.bz2 548797 RMD160 a61c8fd5ba3c745a8c64733d30d09dc786ee977f SHA1 89cd726b05ed7d21f5be6e42fff51579ba8c78e8 SHA256 7ccd9e81458ec1be3898640919237a803b48c9950e053686d33450c3670e2f60
-EBUILD kontrolpack-2.0.2-r1.ebuild 1156 RMD160 13c246672c8490fcc53bfb6ace0bead1f09ad9ec SHA1 a7deec14aac406b39fe11a83f4f52e6d1272d723 SHA256 d190ac67d8719632c5dbd6ef8843f0b724cb20f7c2ffc59b9e9c49c8cc2e5d0a
-MISC ChangeLog 645 RMD160 d0c768a35eeda5d3ebce7846b73749a2d955501c SHA1 a8359ddabd0718375f7d15c8b11337a4b9db906a SHA256 582c1bcf2c9ad3f6a6ba95f02efe58e43afa32bafa4a2442e7858e2fbb6b3407
-MISC ChangeLog.new~ 252 RMD160 f2a5956556b1a22d50d0a758d64c76af68c9a6eb SHA1 2fbc28027de7a3f6b846247b2cf31f8d8cd39b34 SHA256 cb3365a5f5d5159b56b72a92042b24af20d39a8487aa716db1f1e535d17fb8f3
+DIST KontrolPack-2.0.3.tar.gz 535788 RMD160 0bc2a876898b82b5f7be996942c13100995f06c8 SHA1 c6fcc51fa6f9d2683190c4b4abbb665724193a46 SHA256 c614bfff9d5a426bad103058756e9f8a28e3c1a265dfa0c9156015c131067674
+EBUILD kontrolpack-2.0.3.ebuild 985 RMD160 c839f8cb1b3a4e215f9e0d142cedf23c3064f4b3 SHA1 4836e44c257b3ba50e461ee4b7b72f8a33749f00 SHA256 25107a13d06a3ff76fe5e4db68805575973d8c54f6b812c22e22399eb0bccbbf
+MISC ChangeLog 811 RMD160 bc755b9d1f2bffc9f02e0fd5709e361a3b67cb85 SHA1 130f118bc492a84e62fff978a0e4c3c36f9c5cf0 SHA256 24f6443f1f4723123fcdfd772d76aab4ec149985bf82c2e5688e1b7ee54813bd
 MISC metadata.xml 294 RMD160 a876c02ee69404aba92cd94beed6a238e0043581 SHA1 ac44a6cbf847ec1a492eaecbb7ffd6bce60a380d SHA256 43aeca91b633f1d854fba6e201a4321e46e96e4549361330926ea0e522cc00ba
