@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*kontrolpack-2.0.3 (12 Aug 2009)
+
+  12 Aug 2009; Dominik Kapusta <d@ayoy.net> -kontrolpack-2.0.2-r1.ebuild,
+  +kontrolpack-2.0.3.ebuild:
+  Version bump, remove old.
+
 *kontrolpack-2.0.2-r1 (24 Jul 2009)
 
   24 Jul 2009; Dominik Kapusta <d@ayoy.net> -kontrolpack-2.0.2.ebuild,
